force-app/main/default/objects/ProductCategory__c/fields/TechnicalProductCategoryUniqueHelper__c.field-meta.xml
<CustomField>
    <fullName>TechnicalProductCategoryUniqueHelper__c</fullName>
    <description>I want a given product to be assigned to a given category only once. This field works with the flow MakeSureThereIsNoProductCategoryConnectionAlready</description>
    <inlineHelpText>I want a given product to be assigned to a given category only once. This field works with the flow MakeSureThereIsNoProductCategoryConnectionAlready</inlineHelpText>
    <label>Technical Product Category Unique Helper</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>