force-app/main/default/objects/ProductCategory__c/fields/TechnicalProductStatusforRollup__c.field-meta.xml
<CustomField>
    <fullName>TechnicalProductStatusforRollup__c</fullName>
    <description>Technical field for summing up different categories for different statuses</description>
    <inlineHelpText>Technical field for summing up different categories for different statuses</inlineHelpText>
    <label>Technical Product Status for Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Status</valueSetName>
    </valueSet>
</CustomField>