force-app/main/default/objects/ProductCategory__c/validationRules/NoChangeTechnicalProductCategoryUH.validationRule-meta.xml
<ValidationRule>
    <fullName>NoChangeTechnicalProductCategoryUH</fullName>
    <active>true</active>
    <description>Prevents users from updating technical field which should be filled only by a flow ThereIsNoProductCategoryConnectionAlready</description>
    <errorConditionFormula>ischanged( TechnicalProductCategoryUniqueHelper__c )</errorConditionFormula>
    <errorMessage>You cannot update this technical field. It is only filled once by a flow at the record creation.</errorMessage>
</ValidationRule>